adding updated test post

--- a/_posts/2024-10-21-TestPost.md
+++ b/_posts/2024-10-21-TestPost.md
@@ -1,20 +1,20 @@
 ---
 layout: post
-title: Test Post
-date: '2024-10-21'
+title: First Post
+date: '2024-10-29'
 tags: [ testing, testing ]
 ---
 
-this is a test
+this is the first post
 
-## this is a list:
+## this is the first list:
 * first
 * second
 * third
 
-### Header
-## Header
-# Header
+### Header 1
+## Header 2
+# Header 3
 
 [Link](https://github.com/SophiSamus1/Samus_Lab_Notebook/blob/master/protocols/LabNotebookTutorial.md) to protocol in repo 
 
