fixing layout for test post

--- a/_posts/2025-07-29-TestPost2.md
+++ b/_posts/2025-07-29-TestPost2.md
@@ -8,12 +8,20 @@ tags: [Ciguatera, Counts]
 
 Test post for counts layout
 
+
 **Sample Name**
-*Count A: 0
-Count B: 0
-Count C: 0*
+
+*Count A: 0*
+
+*Count B: 0*
+
+*Count C: 0*
+
 
 **Next Sample Name**
-*Count A: 0
-Count B: 0
-Count C: 0*
+
+*Count A: 0*
+
+*Count B: 0*
+
+*Count C: 0*
